--- a/1/EomTool/EomToolWeb/Views/Batches/ShowNotes.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Batches/ShowNotes.cshtml
@@ -5,7 +5,7 @@
     <b>Date:</b> @update.date_created<br />
     <b>By:</b> @update.author<br />
     @if (!String.IsNullOrWhiteSpace(update.extra)) { <b>For:</b> @update.extra<br /> }
-    <b>Action:</b> @(update.MediaBuyerApprovalStatus != null ? update.MediaBuyerApprovalStatus.name : "")<br />
+    <b>Action:</b> @update.Action<br />
     @Html.Raw(update.note.Replace("\n","<br />"))
 </p>
 }
