--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
@@ -12,7 +12,7 @@
     <ol>
     @foreach (var campaign in Model.Countries[country])
     {
-        <li>@Html.ActionLink(campaign.Name, "Show", new {pid = campaign.Pid})</li>
+        <li>@Html.ActionLink(campaign.Name, "List", new {pid = campaign.Pid})</li>
     }
     </ol>
 }
