--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EomToolWeb.Models.CampaignsByCountryViewModel
-
 @{
     ViewBag.Title = "Campaigns By Country";
+    Layout = "~/Views/Shared/_LayoutCampaignWiki.cshtml";
 }
 
 <h2>Campaigns By Country</h2>
