--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -7,11 +7,13 @@
 <br />
 Payable Action: @Model.PayableAction
 <br />
+Traffic Type: Banners, Email, Contextual, search allowed (with restrictions) 
+<br />
+Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
+<br />
 Countries: @Model.Countries
 <br />
-Traffic Type: Banners, Email, Contextual, search allowed (with restrictions) 
-
-@*Link: http://www.ziinga.com/landing/au_mega_deals97.php/ 
+@*
 
 Payout: $3.00 
 
