--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -11,7 +11,7 @@ Traffic Type: Banners, Email, Contextual, search allowed (with restrictions)
 <br />
 Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
 <br />
-Countries: @Model.Countries
+Countries: @Model.CountryCodes
 <br />
 @*
 
