--- a/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
@@ -57,8 +57,8 @@
     @Html.EditorFor(c => c.CampaignCap)
 </p>
 <p>
-    @Html.LabelFor(c => c.CountryCodes)
-    @Html.EditorFor(c => c.CountryCodes)
+    @Html.LabelFor(c => c.Countries)
+    @string.Join(",", Model.Countries.Select(c => c.CountryCode))
 </p>
 <p>
     @Html.LabelFor(c => c.ScrubPolicy)
