adding vertical filter (in progress)

--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -9,29 +9,26 @@ Payable Action: @Model.PayableAction
 <br />
 Traffic Type: Banners, Email, Contextual, search allowed (with restrictions) 
 <br />
+Category: @Model.Vertical
+<br />
 Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
+<br />
+Payout: @Model.Payout
+<br />
+Payout to Direct Agents: @Model.Revenue
+<br />
+Important Details: @Model.ImportantDetails
+<br />
+BannedNetworks: @Model.BannedNetworks
+<br />
+CampaignCap: @Model.CampaignCap
+<br />
+ScrubPolicy: @Model.ScrubPolicy
+<br />
+EOM Info: @Model.EomNotes
 <br />
 Countries: @Model.CountryCodes
 <br />
 @*
-
-Payout: $3.00 
-
-Important Details 
-
-No Google, no trademark term bidding, no incentivization or virtual currency traffic
- 
-Lead Caps: Each partner is capped at 200 leads per day. Must seek approval to run past this point. Please check with AM to make sure pub does not exceed campaigns daily budget.
- 
 Campaign Budget: 100 leads per day until further notice. 
-
-Payout to Direct Agents: $4.00 
-
-Passed Information: Lead ID 
-
-Countries: Australia 
-
-Scrub Policy: No scrub except fraud 
-
-EOM will be finalized in 10 days. 
 *@
