--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -13,14 +13,14 @@
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.js")
 </head>
 <body>
-<header>
+    <header>
     <div class="content-wrapper">
         <div class="float-left">
             <nav>
                 <ul id="menu">
                     <li>Show:</li>
                     <li>@Html.ActionLink("By Country", "ListByCountry", "Campaigns")</li>
-                    <li>@Html.ActionLink("US", "List", "Campaigns", new { country = "US" }, null)</li>
+                    <li>@Html.ActionLink("US", "List", "Campaigns", new { country = "US", vertical = "Insurance" }, null)</li>
                     <li>@Html.ActionLink("All", "List", "Campaigns")</li>
                     <li>@Html.ActionLink("Country List", "ShowCountries", "Campaigns")</li>
                 </ul>
@@ -28,13 +28,11 @@
         </div>
     </div>
 </header>
-
-<div id="body">
-    <section class="content-wrapper main-content clear-fix">
+    <div id="body">
+        <section class="content-wrapper main-content clear-fix">
         @RenderBody()
     </section>
-</div>
-
+    </div>
     @RenderSection("scripts", required: false)
 </body>
 </html>
