--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -7,9 +7,9 @@
 <br />
 Payable Action: @Model.PayableAction
 <br />
-Traffic Type: Banners, Email, Contextual, search allowed (with restrictions) 
+Traffic Type: @Model.TrafficTypes
 <br />
-Category: @Model.Vertical
+Vertical: @Model.Vertical
 <br />
 Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
 <br />
