--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -23,7 +23,7 @@
                     <ul id="menu">
                         <li>Show:</li>
                         <li>@Html.ActionLink("By Country", "ListByCountry", "Campaigns")</li>
-                        <li>@Html.ActionLink("US", "List", "Campaigns", new { country = "US", vertical = "Insurance" }, null)</li>
+                        <li>@Html.ActionLink("US", "List", "Campaigns", new { country = "US" }, null)</li>
                         <li>@Html.ActionLink("All", "List", "Campaigns")</li>
                         <li>@Html.ActionLink("Country List", "ShowCountries", "Campaigns")</li>
                     </ul>
