--- a/1/EomTool/EomToolWeb/Views/Campaigns/ShowCountries.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ShowCountries.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<string>
 @{
     ViewBag.Title = "Country List";
+    ViewBag.MenuItem = "CountryList";
     Layout = "~/Views/Shared/_LayoutCampaignWiki.cshtml";
 }
 
