field formatting, etc

--- a/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
@@ -30,7 +30,7 @@
 </p>
 <p>
     @Html.LabelFor(c => c.CostCurrency)
-    @Model.CostCurrency
+    @Html.EditorFor(c => c.CostCurrency)
 </p>
 <p>
     @Html.LabelFor(c => c.Cost)
@@ -38,7 +38,7 @@
 </p>
 <p>
     @Html.LabelFor(c => c.RevenueCurrency)
-    @Model.RevenueCurrency
+    @Html.EditorFor(c => c.RevenueCurrency)
 </p>
 <p>
     @Html.LabelFor(c => c.Revenue)
