--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -13,17 +13,18 @@ Vertical: @Model.Vertical
 <br />
 Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
 <br />
-Payout: @Model.Payout
+Payout: @Model.CostCurrency@Model.Cost
 <br />
-Payout to Direct Agents: @Model.Revenue
+Payout to Direct Agents: @Model.RevenueCurrency@Model.Revenue
 <br />
-Important Details: @Model.ImportantDetails
+<b>Important Details:</b><br />
+@Model.ImportantDetails
 <br />
-BannedNetworks: @Model.BannedNetworks
+Banned Networks: @Model.BannedNetworks
 <br />
-CampaignCap: @Model.CampaignCap
+Campaign Cap: @Model.CampaignCap
 <br />
-ScrubPolicy: @Model.ScrubPolicy
+Scrub Policy: @Model.ScrubPolicy
 <br />
 EOM Info: @Model.EomNotes
 <br />
