--- a/1/EomTool/EomToolWeb/Content/Site.css
+++ b/1/EomTool/EomToolWeb/Content/Site.css
@@ -506,13 +506,14 @@ input, textarea
     font-size: 1.2em;
     margin: 5px 0 6px 0;
     padding: 5px;
-    width: 300px;
+    width: 500px;
 }
 
 textarea
 {
     font-family: inherit;
     width: 500px;
+    height: 100px;
 }
 
 input:focus, textarea:focus
