--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -26,6 +26,7 @@
                         <li id="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List", "Campaigns", new { country = "US" }, null)</li>
                         <li id="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List", "Campaigns", new { searchstring = "CPM" }, null)</li>
                         <li id="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List", "Campaigns")</li>
+                        <li id="@(ViewBag.MenuItem == "Top" ? "selitem" : "")">@Html.ActionLink("Top", "TopTenRevenue", "Campaigns")</li>
                         <li id="@(ViewBag.MenuItem == "Search" ? "selitem" : "")">@Html.ActionLink("Search", "Search", "Campaigns")</li>
                     </ul>
                 </nav>
