--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CampaignViewModel
-<img src="@Model.ImageUrl" alt="@Model.Name" /> @Model.AdManagers, @Model.AccountManagers
+@{ Model.Context = this.ViewContext.HttpContext; }
+<img src="@Model.ImageUrl" alt="@Model.Name" id="campaign-image-@Model.Pid" class="campaign-image" /> @Model.AdManagers, @Model.AccountManagers
 <br />
 <b>@Model.Name</b> <a href="#" onclick="EditCampaign(@Model.Pid); return false">Edit</a>
 <br />
