--- a/1/EomTool/EomToolWeb/Content/Site.css
+++ b/1/EomTool/EomToolWeb/Content/Site.css
@@ -1,14 +1,11 @@
 ﻿html
 {
-    /*background-color: #e2e2e2;*/
     margin: 0;
     padding: 0;
 }
 
 body
 {
-    /*background-color: #fff;*/
-    /*border-top: solid 10px #000;*/
     color: #333;
     font-size: .85em;
     font-family: "Segoe UI" , Verdana, Helvetica, Sans-Serif;
@@ -104,17 +101,67 @@ h5 a:link, h5 a:visited, h5 a:active
     text-decoration: none;
 }
 
+/* campaign filters
+----------------------------------------------------------*/
+div#CampaignFilters
+{
+    position: fixed; 
+    top: 0px; 
+    left: 0px; 
+    height: 71px; 
+    width: 520px;
+    background-color: #1A84C0; 
+    padding: 7px 0px 5px 40px; 
+    z-index: 400; 
+    border-bottom: 1px solid Black;
+    border-right: 1px solid Black; 
+    border-left 1px solid black; 
+    -moz-border-radius-bottomright: 10px;
+    -webkit-border-bottom-right-radius: 10px; 
+    border-bottom-right-radius: 10px; 
+    -moz-border-radius-bottomleft: 10px;
+    -webkit-border-bottom-left-radius: 10px; 
+    border-bottom-left-radius: 10px;
+}
+
+div#CampaignFiltersInner
+{
+    margin-top: 41px;
+}
+
+/* campaign campaign item list pagers
+----------------------------------------------------------*/
+div#CampaignListPagerTop
+{
+    position: fixed; 
+    top: 5px; 
+    right: 0px;
+    z-index: 500; 
+    padding: 5;      
+    margin-right: 12px;
+    width: 700px;    
+    border: 0px;     
+}
+
+div#CampaignListPagerBottom
+{
+    border: 0px; 
+    border-top: 1px solid Black; 
+    position: fixed; 
+    bottom: 0; 
+    z-index: 500; 
+    width: 100%
+}
 
 /* main layout
 ----------------------------------------------------------*/
 .content-wrapper
 {
-    margin: 0 auto; /*    max-width: 960px; */
+    margin: 0 auto;
 }
 
 #body
 {
-    background-color: #efeeef;
     clear: both;
     padding-bottom: 35px;
 }
@@ -203,11 +250,21 @@ footer
 
 /* menu
 ----------------------------------------------------------*/
+#menu
+{
+    -moz-border-radius-bottomleft: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 ul#menu
 {
     font-size: 1.3em;
     font-weight: 600;
-    margin: 0 0 5px;
+    margin: 0px 10px 0px 10px;
     padding: 0;
     text-align: right;
 }
@@ -227,6 +284,11 @@ ul#menu li a
 }
 
 ul#menu li#selitem a
+{
+    color: #933;
+}
+
+ul#menu span#parentselitem
 {
     color: #933;
 }
